Add WinCopyS3Icon component reference to main feature in installer

--- a/installer/Product.wxs
+++ b/installer/Product.wxs
@@ -28,6 +28,7 @@
       <ComponentRef Id="ConfigFiles" />
       <ComponentRef Id="RuntimeConfig" />
       <ComponentRef Id="StartMenuShortcut" />
+      <ComponentRef Id="WinCopyS3Icon" />
     </Feature>
 
     <!-- Optional Startup Feature -->
